[package]
name = "multi_tbx"
version = "0.1.0"
authors = ["Jason Chin <cschin@infoecho.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bgzip="0.2.1"
rustc-hash = "1.1.0"
clap = "2"
regex = "1"
lazy_static = "1.4.0"
